--- a/QuizService/QuizService/src/main/resources/application.properties
+++ b/QuizService/QuizService/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=QuizService
 
 server.port=8086
-spring.datasource.url=jdbc.mysql://localhost:3306/quiz_microservice
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microservices
 spring.datasource.username=root
 spring.datasource.password=root
 
